test/files/neg/t558.check
t558.scala:13: error: value file is not a member of NewModel.this.RootURL
    final val source = top.file;
                           ^
one error found
